@@ -1,6 +1,6 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-haskell/cipher-aes/cipher-aes-0.2.9.ebuild,v 1.1 2014/12/14 04:41:48 gienah Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-haskell/cipher-aes/cipher-aes-0.2.9.ebuild,v 1.2 2015/01/28 20:03:10 qnikst Exp $
 
 EAPI=5
 
@@ -16,7 +16,7 @@ SRC_URI="mirror://hackage/packages/archive/${PN}/${PV}/${P}.tar.gz"
 LICENSE="BSD"
 SLOT="0/${PV}"
 KEYWORDS="~amd64 ~x86"
-IUSE="+support_aesni"
+IUSE=""
 
 RDEPEND="dev-haskell/byteable:=[profile?]
 	>=dev-haskell/crypto-cipher-types-0.0.6:=[profile?] <dev-haskell/crypto-cipher-types-0.1:=[profile?]
@@ -30,8 +30,3 @@ DEPEND="${RDEPEND}
 		>=dev-haskell/test-framework-0.3.3
 		>=dev-haskell/test-framework-quickcheck2-0.2.9 )
 "
-
-src_configure() {
-	haskell-cabal_src_configure \
-		$(cabal_flag support_aesni support_aesni)
-}
