@@ -1,6 +1,28 @@
-AUX ikarus-0.0.3_p1870-cpu_has_sse2.patch 407 RMD160 150837da7d7b7c0a9952a2b3b7c3e881175a7983 SHA1 36c07f8b64bc95bc1f13a7cdf5e6196b1d391b99 SHA256 b9dab78bae863214bf512e2c5b0371a1984db0f63942f00297a82aba155829ee
-AUX ikarus-0.0.3_p1870-ikarus-enter.patch 409 RMD160 94f567f242a9c864b56b548c4c3556d8d6d59e06 SHA1 e5824033c550c3dea7757071344b671a3ced2e7d SHA256 56bd469abbcc98d4e30b9125b65a48e484d21c09c072a718d043142d3c625f78
-DIST ikarus-scheme-r1870.tgz 9397981 RMD160 3e6de726a0d62c76dd0c5617d4a6796b934b74a9 SHA1 8c0962c47346535047cfcc7160c2d9485af1fb22 SHA256 cc4a2a23517a485d5ddbde87d9e504fb618e30b1f6d661e7c7b5061c19a3ca82
-EBUILD ikarus-0.0.3_p1870.ebuild 1398 RMD160 7bc9e1ed5b43a4b45ebd37ac852c5ecbfedd3cb0 SHA1 eeb5c4524e61282ca07232b40192ec7d14606d2f SHA256 c855cef271bac295b1bc2d4e52bae67efdd01933a995e3e4d13a99b316fc3dd6
-MISC ChangeLog 1334 RMD160 cb35ac6bae33cafdc01fe3234abb92c4eac36598 SHA1 39d275af450762399d946f6159f424a10cfb1aa4 SHA256 a7916253f4a0790778bc351ac1f884cb6b9458f24f9a818d53e2539305671fab
-MISC metadata.xml 473 RMD160 eab9533a8d904541c699e4ebf65f8eb3903105c6 SHA1 41049404df02080091c08aecd68021719dec141d SHA256 2dbcbbaa4ada4376719a66189523f88f2bc6956dfc4fb744de4b5e5d98c604e4
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+AUX ikarus-0.0.3_p1870-cpu_has_sse2.patch 407 SHA256 b9dab78bae863214bf512e2c5b0371a1984db0f63942f00297a82aba155829ee SHA512 566cb42b563cc8449fc669ee3478df98ac36540d86f502c095ccea1da34818cf4fcd864dd757375eed682358f43bc5b83060eb98e90bcc8d6baa473305fffacf WHIRLPOOL 8a2ff89a2cf2aefcf6789cfae70bc4416aa1a23dbdff7e020b5da3c0727d7f3a550df6b45ae4531ee4ddcc48930d5ba0f4ed01edf4bb468dd594e2563e946ae4
+AUX ikarus-0.0.3_p1870-ikarus-enter.patch 409 SHA256 56bd469abbcc98d4e30b9125b65a48e484d21c09c072a718d043142d3c625f78 SHA512 b0d4840b42a3aa30a6b7b0eaefce24889910dd0c7785bdec6c3b65c7f15b32009c9f72b0172f8f4b17d9e9de969884bccde1c157da75bffc2a02591c29d7fd32 WHIRLPOOL 96c4fbab476e76b39717bafc6d97e4a27039370e9e3cbbbda47ea1c8d6cd36010e2b71225a5ca1c1ccc5a22b78ac9123ebd602fc97b6d4b7df1f01c8baa56d72
+DIST ikarus-scheme-r1870.tgz 9397981 SHA256 cc4a2a23517a485d5ddbde87d9e504fb618e30b1f6d661e7c7b5061c19a3ca82
+EBUILD ikarus-0.0.3_p1870.ebuild 1426 SHA256 dd39b6437a60dd7cdbaed93c3d6ddbf7d2aee294e21bb500cd49b2a0ebadcddc SHA512 c7273213f124715fcbe3f34060891268657d085676b772d93efb7f61a7a004b1fce08c4466b016235823c52e4bd7143b84149d194262d7534a3925b6e84ff2ca WHIRLPOOL 545e285fe36569c38e7baaedcabb94db77deb58a333caf6346391f72f7c041cd3330eaf0c9aa1daab77a683c92d5d90cbf966571291ba55b8e2d7e7ba1983cf0
+MISC ChangeLog 1438 SHA256 ceebd75e333fc5c6afe7a3ca0059265c820c1c75d3b36987a9d2a3d8cffb77cf SHA512 a5227efb7f8a13cf968706d878dcaae34cfc62e7a267c66c5c3ca0612bdbdd3cfb910f8c04c4472f96ef81dfa5b1686429e2f6ea10782729edc73cfdd88cd7e5 WHIRLPOOL 01c6e75fbdd3bddfcf7ec2c8d94991dd5cae4f2443fc19ca562cd097e5699b5e00e0469abea8c77ddecda97398c14664f80a0b434129a53d4e7987d62495bf1d
+MISC metadata.xml 473 SHA256 2dbcbbaa4ada4376719a66189523f88f2bc6956dfc4fb744de4b5e5d98c604e4 SHA512 92e343acc18a84fb3eb5bf7c81dae2a84956fc21d76239f0836d898699b0614444435231b3166c7267701d5e0c63ff3a5f44c04ffdea7f81553d224c93bcb590 WHIRLPOOL 3c9a02d4b1ad49cb3d6ad1f0e7bf8f44c405da7e3bc790b7610ee4084b61e9273f7896801a86937d38319204556ddd31adf6c1a96fe9f4a2221d2a9c317ff2c5
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iQJ8BAEBCABmBQJUyUAPXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOibgP/0Fq3XdlvJnWXlW2tpHLEWDn
+eF9f3i3GCuZ5iqhN63f49TwZwQsm3N0E6yD332PgyrXhOeyvvbd8dZ3pRwd9NqmD
+zJegW28ERsxh3tBQrjMK3SWEsoxcp+fSXr/aw+rQatZKxkHe1mdVKCYX4HvN81NA
+sXOUfiMSjWiC6XMI0J3+LIOz9W9XuxNfYtK3yu/N4AwTXBvT6m466+qJFBSHUx59
+iroUfvMNH7bqcnO+fpaeJahKGfJLlgUncxRDIBlFDAaJeMVvJWPhwyWVZcwpJYKb
+cdImhuU9g1sbpI+BJ4GD23blE5aRuAwzAxktxeg13vqmsRr9N3jaQI82SNHkNHDM
+ceroR4M+Uqtd0yDvJbsGgHKbQzJ+twmUyrkPHLrUBR+8qk1l0WFui7rYWQP4v/uL
+Ws29CRh0Xut0q3HwV0B6xuqYWx23iivsUa4mOjTvDvxG2Tfdxa9axynhRkBq+qc3
+nTc3qWtPLxeiBAb/2U1LvTCRPpfrF+F4+S8/uTEf4JBygIMIib5ZAg+yv4SYsFu/
+TaiFybtXiB7jht+f10wSjywvwr8fCCLfo+SOUtHtWfDd/Zi2nAkvH3f7kZ7sYlfF
+gTEFFtF1q50tvlyohwxMPzReQamYwuZGmEofgK0frCzz7aILokGaoEJue90wXYLm
+BJ2tSv/X9PxwIJRPAQE3
+=qE32
+-----END PGP SIGNATURE-----
