@@ -3,11 +3,11 @@ DEPEND=dev-haskell/byteable:=[profile?] >=dev-haskell/crypto-cipher-types-0.0.6:
 DESCRIPTION=Fast AES cipher implementation with advanced mode of operations
 EAPI=5
 HOMEPAGE=http://github.com/vincenthz/hs-cipher-aes
-IUSE=+support_aesni doc hscolour profile test
+IUSE=doc hscolour profile test
 KEYWORDS=~amd64 ~x86
 LICENSE=BSD
 RDEPEND=dev-haskell/byteable:=[profile?] >=dev-haskell/crypto-cipher-types-0.0.6:=[profile?] <dev-haskell/crypto-cipher-types-0.1:=[profile?] >=dev-haskell/securemem-0.1.2:=[profile?] >=dev-lang/ghc-7.4.1:=
 SLOT=0/0.2.9
 SRC_URI=mirror://hackage/packages/archive/cipher-aes/0.2.9/cipher-aes-0.2.9.tar.gz
 _eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	ghc-package	29f14cf665461bc19b8724d1842b0b3a	haskell-cabal	f398638b447d3821846f2e2abbc33c1b	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=3d34fa121abf736de271bf5764411fbb
+_md5_=6a604af6d06b73a75dfa1606b2d597c1
