@@ -3,11 +3,11 @@ DEPEND=>=dev-libs/gmp-4.2.2 !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/aut
 DESCRIPTION=A free optimizing incremental native-code compiler for R6RS Scheme
 EAPI=3
 HOMEPAGE=http://ikarus-scheme.org/
-IUSE=sse2 doc
+IUSE=cpu_flags_x86_sse2 doc
 KEYWORDS=-* ~x86
 LICENSE=GPL-3
 RDEPEND=>=dev-libs/gmp-4.2.2
 SLOT=0
 SRC_URI=http://ikarus-scheme.org/ikarus.dev/ikarus-scheme-r1870.tgz
 _eclasses_=autotools	8fc2dd333ef9346c906ffd9a523d8211	eutils	998e5931fb95b10a6a11ec796ada2759	flag-o-matic	c263990f1b677b0f0be0a3299f179762	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=fe6a4ca13dc5da7fed33c6cd478ce177
+_md5_=1fbc32d3e3f07b61e7d4664d57318b05
