@@ -1,6 +1,9 @@
 # ChangeLog for dev-scheme/ikarus
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-scheme/ikarus/ChangeLog,v 1.4 2010/04/27 17:00:00 chiiph Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-scheme/ikarus/ChangeLog,v 1.5 2015/01/28 20:01:18 mgorny Exp $
+
+  28 Jan 2015; Michał Górny <mgorny@gentoo.org> ikarus-0.0.3_p1870.ebuild:
+  Switch to CPU_FLAGS_X86.
 
 *ikarus-0.0.3_p1870 (27 Apr 2010)
 
@@ -30,4 +33,3 @@
   Initial Commit of dev-scheme/ikarus. Ebuild first written by Marijn
   Schouten <hkBst@gentoo.org> and updated by me. Moved from the overlay to
   the main tree.
-
