@@ -1,6 +1,12 @@
 # ChangeLog for dev-haskell/cipher-aes
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-haskell/cipher-aes/ChangeLog,v 1.8 2014/12/14 04:41:48 gienah Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-haskell/cipher-aes/ChangeLog,v 1.10 2015/01/28 20:03:39 qnikst Exp $
+
+  28 Jan 2015; Alexander Vershilov <qnikst@gentoo.org> metadata.xml:
+  drop ineffective use flag
+
+  28 Jan 2015; Alexander Vershilov <qnikst@gentoo.org> cipher-aes-0.2.9.ebuild:
+  drop ineffective use flag
 
 *cipher-aes-0.2.9 (14 Dec 2014)
 
